# GoA-agent

./: .gitignore  pyproject.toml
scripts/: run_tender.py
src/: config.py  pipeline.py
src/extraction/: __init__.py  parallel.py  router.py  tier1_vision.py  tier2_spatial.py  tier3_gemini.py
src/grounding/: __init__.py  coordinate_matcher.py  similarity.py  validation.py  writeback.py
src/ingestion/: __init__.py  email_parser.py  page_classifier.py
src/knowledge/: __init__.py  fewshot_store.py  kg_client.py  kg_reader.py  kg_writer.py
src/models/: __init__.py  enums.py  ga_models.py  internal_models.py
src/resolution/: __init__.py  assembler.py  crossref_resolver.py  normalizer.py  product_resolver.py
tests/: test_assembler.py  test_crossref.py  test_email_parser.py  test_fewshot.py  test_grounding.py  test_kg.py  test_models.py  test_normalizer.py  test_page_classifier.py  test_pipeline_e2e.py  test_product_resolver.py  test_router.py  test_tier1.py  test_tier2.py  test_tier3.py  test_validation.py
tests/fixtures/: sample_email.txt  sample_extraction_output.json  sample_file_coordinates.json  sample_page_narrative.json  sample_page_with_table.json
